# dlhn

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
benches/: deserialize.rs  my_benchmark.rs  serialize.rs  serialize_body.rs  serialize_without_validate.rs
dlhn/: Cargo.toml  README.md
dlhn/benches/: body.rs  date.rs  date_time.rs  de.rs  derive_serialize_header.rs  ser.rs
dlhn/src/: big_decimal.rs  big_int.rs  big_uint.rs  date.rs  date_time.rs  de.rs  leb128.rs  lib.rs  prefix_varint.rs  ser.rs  zigzag.rs
dlhn/src/body/: mod.rs
dlhn/src/format/: big_decimal.rs  big_int.rs  big_uint.rs  date.rs  date_time.rs  mod.rs
dlhn/src/header/: de.rs  mod.rs  ser.rs
dlhn/tests/: derive.rs  stream.rs
dlhn_bench/: Cargo.toml  build.rs
dlhn_bench/benches/: dlhn.rs  json.rs  messagepack.rs  protobuf.rs
dlhn_bench/src/: lib.rs
dlhn_derive/: Cargo.toml
dlhn_derive/src/: leb128.rs  lib.rs  prefix_varint.rs
dullahan/: Cargo.toml
dullahan/benches/: serialize_body.rs  serialize_without_validate.rs
dullahan/src/: body.rs  deserializer.rs  header.rs  serializer.rs
dullahan/src/stream/: stream_serializer.rs
dullahan_bench/: Cargo.toml  build.rs
dullahan_bench/benches/: dullahan.rs  json.rs  messagepack.rs  protobuf.rs
dullahan_bench/src/: lib.rs  proto_test.proto
dullahan_serde/: Cargo.toml
dullahan_serde/benches/: date.rs  date_time.rs  de.rs  derive_serialize_header.rs  ser.rs
dullahan_serde/src/: de.rs  leb128.rs  lib.rs  ser.rs  zigzag.rs
dullahan_serde/src/body/: mod.rs
dullahan_serde/src/format/: big_decimal.rs  big_int.rs  big_uint.rs  date.rs  date_time.rs  mod.rs
dullahan_serde/src/header/: de.rs  deserialize_header.rs  mod.rs  ser.rs  serialize_header.rs
dullahan_serde/tests/: derive.rs  stream.rs
dullahan_serde_derive/: Cargo.toml
dullahan_serde_derive/src/: leb128.rs  lib.rs
src/: binary.rs  body.rs  deserializer.rs  header.rs  lib.rs  message.rs  serializer.rs
src/stream/: mod.rs  stream_deserializer.rs  stream_serializer.rs
