[package]
name = "dullahan"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0.1"
indexmap = "1.6.1"
time = "0.2.24"
num-traits = "0.2.14"
num-bigint = "0.3.1"
bigdecimal = "0.2.0"

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "serialize_benchmark"
harness = false

[[bench]]
name = "deserialize_benchmark"
harness = false
