[package]
name = "dlhn"
version = "0.1.5"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"
resolver = "2"
license = "Apache-2.0"
description = "DLHN is a blazing fast and small data serialization format."
repository = "https://github.com/otake84/dlhn"
readme = "README.md"
keywords = ["dlhn", "serde", "serialization"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time", "num-traits", "num-bigint", "bigdecimal", "dlhn_derive"]

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
time = { version = "0.3.2", optional = true }
num-traits = { version = "0.2.14", optional = true }
num-bigint = { version = "0.4.2", optional = true }
bigdecimal = { version = "0.3.0", optional = true }
serde_bytes = "0.11.5"
dlhn_derive = { version = "0.1.1", path = "../dlhn_derive", optional = true }

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "ser"
harness = false

[[bench]]
name = "de"
harness = false

[[bench]]
name = "body"
harness = false

[[bench]]
name = "date"
harness = false

[[bench]]
name = "date_time"
harness = false

[[bench]]
name = "derive_serialize_header"
harness = false
