[package]
name = "dlhn_bench"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
dlhn = { path = "../dlhn" }
dlhn_derive = { path = "../dlhn_derive" }
serde_json = "1.0.79"
rmp-serde = "1.0.0"
prost = "0.9.0"
prost-types = "0.9.0"
iai = "0.1.1"

[build-dependencies]
prost-build = "0.9.0"

[[bench]]
name = "dlhn"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "messagepack"
harness = false

[[bench]]
name = "protobuf"
harness = false
