[package]
name = "dlhn_bench"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
dlhn = { path = "../dlhn" }
serde_json = "1.0.81"
rmp-serde = "1.1.0"
prost = "0.10.3"
prost-types = "0.10.1"
iai = "0.1.1"

[build-dependencies]
prost-build = "0.10.3"

[[bench]]
name = "dlhn"
harness = false

[[bench]]
name = "json"
harness = false

[[bench]]
name = "messagepack"
harness = false

[[bench]]
name = "protobuf"
harness = false
