[package]
name = "dlhn_derive"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Procedural Macros for DLHN"
repository = "https://github.com/otake84/dlhn"
readme = "README.md"
keywords = ["dlhn", "serde", "serialization"]
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.73"
proc-macro2 = "1.0.27"
quote = "1.0.9"
