[package]
name = "dullahan"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-encoding = "3.0.1"
time = "0.2.26"
num-traits = "0.2.14"
num-bigint = "0.3.2"
bigdecimal = "0.2.0"

[dev-dependencies]
iai = "0.1.1"

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "serialize_without_validate"
harness = false

[[bench]]
name = "serialize_body"
harness = false

[[bench]]
name = "deserialize"
harness = false
