[package]
name = "dullahan_serde"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dullahan = { version = "0.1", path = "../dullahan" }
serde = "1.0.125"
