[package]
name = "dullahan_serde"
version = "0.1.0"
authors = ["Shogo Otake <shogo.otake@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dullahan = { version = "0.1", path = "../dullahan" }
serde = "1.0.125"
integer-encoding = "3.0.1"
time = "0.2.26"
num-traits = "0.2.14"
num-bigint = "0.3.2"

[dev-dependencies]
serde = { version = "1.0.125", features = ["derive"] }
serde_bytes = "0.11.5"
